hphp/test/slow/inout/bad-arg-pipe.php.expectf
Fatal error: You cannot use this syntax with `inout`. in %s/bad-arg-pipe.php on line 8
